Fixed text-align
Fixed text-align problem.

--- a/2-styling/_typography.scss
+++ b/2-styling/_typography.scss
@@ -19,7 +19,7 @@
 	padding:0;
 	@include tablet {
 		font-size: 1.8rem;
-		
+
 	}
 	@include mobile {
 		font-size:2.4em;
@@ -46,7 +46,6 @@
   font-size:3.6rem;
   font-family: 'Oswald', sans-serif;
   color: white;
-  text-align:center;
   line-height:14.4rem;
 	@include tablet {
 		font-size:1.8rem;
